# gd

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
crates/gd-class-db/: Cargo.toml
crates/gd-class-db/src/: builtin_generated.rs  builtins.rs  curated.rs  lib.rs
crates/gd-core/: Cargo.toml
crates/gd-core/src/: ast_owned.rs  color.rs  config.rs  debug_types.rs  fs.rs  gd_ast.rs  lib.rs  lint_types.rs  parser.rs  printer.rs  process.rs  resource_parser.rs  rewriter.rs  type_inference.rs  workspace_index.rs
crates/gd-core/src/cfg/: dataflow.rs  mod.rs
crates/gd-core/src/ssr/: captures.rs  constraints.rs  equality.rs  matcher.rs  mod.rs  parse.rs  pattern.rs  preview.rs  replace.rs  tests.rs
crates/gd-fmt/: Cargo.toml
crates/gd-fmt/src/: lib.rs  rules.rs
crates/gd-fmt/src/printer/: annotations.rs  expressions.rs  mod.rs  tests.rs
crates/gd-interp/: Cargo.toml
crates/gd-interp/src/: env.rs  error.rs  eval.rs  exec.rs  interpreter.rs  lib.rs  power_assert.rs  value.rs
crates/gd-interp/src/builtins/: array.rs  color.rs  dictionary.rs  math.rs  mod.rs  string.rs  vector2.rs  vector3.rs
crates/gd-lint/: Cargo.toml
crates/gd-lint/src/: diagnostics.rs  lib.rs
crates/gd-lint/src/rules/: assert_always_false.rs  assert_always_true.rs  await_in_ready.rs  breakpoint_statement.rs  callable_null_check.rs  class_definitions_order.rs  collapsible_if.rs  comparison_with_boolean.rs  comparison_with_itself.rs  cyclomatic_complexity.rs  deeply_nested_code.rs  duplicate_code.rs  duplicate_delegate.rs  duplicate_function.rs  duplicate_key.rs  duplicate_signal.rs  duplicate_variable.rs  duplicated_load.rs  empty_function.rs  enum_name_collision.rs  enum_naming.rs  enum_variable_without_default.rs  enum_variant_names.rs  enum_without_class_name.rs  float_comparison.rs  get_node_default_without_onready.rs  get_node_in_process.rs  god_object.rs  incompatible_ternary.rs  infer_unknown_member.rs  integer_division.rs  long_function.rs  look_at_before_tree.rs  loop_variable_name.rs  magic_number.rs  manual_array_all.rs  manual_array_any.rs  manual_array_filter.rs  manual_array_map.rs  manual_range_contains.rs  (+61 more)
crates/gd-lsp/: Cargo.toml
crates/gd-lsp/src/: actions.rs  call_hierarchy.rs  completion.rs  daemon_client.rs  definition.rs  diagnostics.rs  formatting.rs  hover.rs  implementations.rs  inlay_hints.rs  lib.rs  references.rs  rename.rs  semantic_tokens.rs  signature_help.rs  symbols.rs  workspace.rs
crates/gd-lsp/src/daemon/: dispatch_debug.rs  dispatch_env.rs  dispatch_eval.rs  dispatch_live.rs  dispatch_lsp.rs  helpers.rs  mod.rs  stream.rs
crates/gd-lsp/src/debug/: enrich.rs
crates/gd-lsp/src/debug/godot_debug_server/: commands.rs  inspect.rs  live.rs  mod.rs  parsers.rs
crates/gd-lsp/src/debug/variant/: decode.rs  encode.rs  tests.rs
crates/gd-lsp/src/query/: analysis.rs  edit.rs  mod.rs  navigation.rs  refactor.rs
crates/gd-lsp/src/refactor/: bulk_delete.rs  bulk_rename.rs  change_signature.rs  collision.rs  convert_node_path.rs  convert_onready.rs  convert_signal.rs  delete_symbol.rs  edit.rs  encapsulate_field.rs  extract_class.rs  extract_constant.rs  extract_guards.rs  extract_method.rs  extract_superclass.rs  inline_delegate.rs  inline_method.rs  inline_variable.rs  introduce_parameter.rs  introduce_variable.rs  invert_if.rs  mod.rs  move_file.rs  move_symbol.rs  mutation.rs  pull_up_member.rs  push_down_member.rs  split_join_declaration.rs  undo.rs
crates/gd-mesh/: Cargo.toml
crates/gd-mesh/src/: array.rs  boolean.rs  extrude.rs  half_edge.rs  inset.rs  lib.rs  loft.rs  merge.rs  mirror.rs  normals.rs  revolve.rs  solidify.rs  spatial.rs  subdivide.rs  tests.rs  topology.rs
docs/: ci.md  commands.md  configuration.md  getting-started.md  godot-version-maintainability.md  lsp.md
docs/research/: binary-protocol-commands.md  godot-eval-protocol.md  godot-marshalls.md  godot-set-property-field.md  godot-warnings-audit.md
editors/vscode/: .vscodeignore  LICENSE  README.md  esbuild.mjs  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: gdscript.tmLanguage.json
src/: main.rs
src/class_db/: generated.rs  mod.rs
src/cli/: addons_cmd.rs  build_cmd.rs  check_cmd.rs  ci_cmd.rs  clean_cmd.rs  completions_cmd.rs  daemon_cmd.rs  debug_cmd.rs  deps_cmd.rs  doc_cmd.rs  edit_gd_cmd.rs  env_cmd.rs  eval_cmd.rs  fmt_cmd.rs  init_cmd.rs  lint_cmd.rs  live_eval.rs  llm_cmd.rs  log_cmd.rs  lsp_cmd.rs  man_cmd.rs  mod.rs  new_cmd.rs  overview_cmd.rs  parse_cmd.rs  query_cmd.rs  refactor_cmd.rs  run_cmd.rs  scene_cmd.rs  ssr_cmd.rs  stats_cmd.rs  stop_cmd.rs  test_cmd.rs  tree_cmd.rs  upgrade_cmd.rs  watch_cmd.rs
src/cli/check_cmd/: args.rs  builtins.rs  classdb.rs  identifiers.rs  mod.rs  structural.rs  tests.rs  types.rs
src/cli/debug_cmd/: args.rs  mod.rs  (+10 more)
src/core/: color.rs  config.rs  fs.rs  gd_ast.rs  live_eval.rs  mod.rs  parser.rs  project.rs  resource_parser.rs  scene.rs  symbol_table.rs  type_inference.rs  workspace_index.rs
src/debug/: dap_client.rs  enrich.rs  godot_debug_server.rs  mod.rs  variant.rs
src/doc/: mod.rs
src/fmt/: mod.rs  printer.rs  rules.rs
src/lint/: diagnostics.rs  mod.rs
src/lsp/: actions.rs  builtin_generated.rs  builtins.rs  call_hierarchy.rs  completion.rs  daemon.rs  daemon_client.rs  definition.rs  diagnostics.rs  formatting.rs  godot_client.rs  hover.rs  implementations.rs  inlay_hints.rs  mod.rs  query.rs  refactor.rs  references.rs  rename.rs  semantic_tokens.rs  signature_help.rs  symbols.rs  util.rs  workspace.rs  workspace_symbol.rs
src/scaffold/: mod.rs  templates.rs
tests/: check.rs  commands.rs  daemon.rs  debug.rs  deps.rs  fmt.rs  integration.rs  lint.rs  lsp_query.rs  lsp_refactor.rs  parse.rs  resource.rs  scene.rs
tests/common/: mod.rs
tests/corpus/: clean.gd  fmt_edges.gd  lint_all_rules.gd
tools/: bbcode.py  corpus_fp.sh  generate_builtins.py  generate_class_db.py  release.sh  test-boolean-primitives.sh  test_lsp_features.py
(+247 files in other folders)
