[package]
name = "gd"
version = "0.1.3"
edition = "2024"
description = "A comprehensive Godot toolchain - format, lint, build, run, and manage Godot projects"
license = "MIT"
repository = "https://github.com/c2lt4r/gd"
readme = "README.md"
keywords = ["godot", "gdscript", "gamedev", "linter", "formatter"]
categories = ["command-line-utilities", "development-tools", "game-development"]

[[bin]]
name = "gd"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
clap_mangen = "0.2"

# Parsing
tree-sitter = "0.24"
tree-sitter-gdscript = "6.1"

# Serialization / Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# File system
walkdir = "2"
ignore = "0.4"

# Parallelism
rayon = "1"

# Terminal output
owo-colors = "4"
indicatif = "0.17"

# Misc
similar = "2"          # Diffing for fmt --check

# HTTP & Archive support
ureq = { version = "3", features = ["json"] }
zip = "2"
urlencoding = "2"
flate2 = "1"
tar = "0.4"

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# LSP server
tower-lsp = "0.20"
tokio = { version = "1", features = ["io-std", "rt-multi-thread", "macros"] }
dashmap = "6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
strip = true
