[package]
name = "gd"
version = "0.2.41"
edition = "2024"
description = "A comprehensive Godot toolchain - format, lint, build, run, and manage Godot projects"
license = "MIT"
repository = "https://github.com/c2lt4r/gd"
readme = "README.md"
keywords = ["godot", "gdscript", "gamedev", "linter", "formatter"]
categories = ["command-line-utilities", "development-tools", "game-development"]

[[bin]]
name = "gd"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
clap_mangen = "0.2"

# Parsing
tree-sitter = "0.24"
tree-sitter-gdscript = "6.1"
tree-sitter-godot-resource = "0.7"

# Serialization / Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# File system
walkdir = "2"
ignore = "0.4"

# Parallelism
rayon = "1"

# Terminal output
owo-colors = "4"
indicatif = "0.17"

# Misc
similar = "2"          # Diffing for fmt --check
strsim = "0.11"

# Half-edge mesh engine
earcutr = "0.4"
bincode = "1"
indexmap = { version = "2", features = ["serde"] }

# HTTP & Archive support
ureq = { version = "3", features = ["json"] }
zip = "2"
urlencoding = "2"
flate2 = "1"
tar = "0.4"

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# LSP server
tower-lsp = "0.20"
tokio = { version = "1", features = ["io-std", "rt-multi-thread", "macros"] }
dashmap = "6"
path-slash = "0.2.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_IO", "Win32_System_Threading", "Win32_Storage_FileSystem"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "benchmarks"
harness = false

[lints.clippy]
pedantic = { level = "deny", priority = -1 }

# Casts — Godot binary protocol uses specific widths (u32, i32, i64, f64);
# safe truncation is intentional and unavoidable throughout debug/variant code
cast_possible_truncation = "allow"
cast_sign_loss           = "allow"
cast_precision_loss      = "allow"
cast_possible_wrap       = "allow"
cast_lossless            = "allow"

# Docs — CLI tool, not a library
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
doc_markdown            = "allow"

# Names — vector/color components (x, y, z, w, r, g, b, a) and similar math vars
similar_names           = "allow"
many_single_char_names  = "allow"
module_name_repetitions = "allow"

# Struct booleans — clap Args structs legitimately have many bool flags
struct_excessive_bools  = "allow"

# Vec macro — the all_rules() vec with 89+ Box<dyn LintRule> triggers this in test builds
large_stack_arrays      = "allow"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
