[package]
name = "gd-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core AST, parsing, type inference, and project model for gd toolchain"

[dependencies]
gd-class-db.workspace = true

tree-sitter.workspace = true
tree-sitter-gdscript.workspace = true
tree-sitter-godot-resource.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true

miette.workspace = true

walkdir.workspace = true
path-slash.workspace = true

owo-colors.workspace = true


[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
