[package]
name = "gd-interp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GDScript expression evaluator and native test runner for gd toolchain"

[dependencies]
gd-core.workspace = true
gd-class-db.workspace = true

thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
